# jackalope

./: .gitignore  .gitmodules  CMakeLists.txt  INSTALL.txt  README.md  README.txt
CMake/: FindRtAudio.cmake  FindSndfile.cmake  LocalBoost.cmake  LocalDbus-cxx.cmake
doc/: license-artistic2.txt
examples/: play_file.c  play_file.cxx  play_file.pl  tube_simulator.pl
jackalope/: .gitignore  async.cxx  async.h  audio.cxx  audio.h  channel.cxx  channel.h  component.cxx  component.forward.h  component.h  daemon.cxx  daemon.forward.h  daemon.h  dbus.adaptor.xml  dbus.cxx  dbus.h  dbus.xml  dbus_objectAdaptee.h  dbus_objectAdapter.cpp  dbus_objectAdapter.h  domain.cxx  domain.h  driver.cxx  driver.h  exception.cxx  exception.h  foreign.cxx  foreign.forward.h  foreign.h  forward.h  graph.cxx  graph.forward.h  graph.h  jackalope-bin.cxx  jackalope-dev.cxx  jackalope.cxx  jackalope.h  library.h  log_dest.cxx  log_dest.forward.h  (+36 more)
jackalope/attic/: async.cxx  async.h  channel.cxx  channel.forward.h  channel.h  dbus.adaptor.xml  dbus.cxx  graph.cxx  graph.h  jackalope.cxx  message.cxx  message.h  network.cxx  node.cxx  node.h  object.forward.h  object.h  property.cxx  signal.cxx  signal.h
jackalope/attic/audio/: gain.cxx  gain.h  ladspa.h  portaudio.cxx  portaudio.h  rtaudio.h  sndfile.cxx
jackalope/attic/old/: channel.cxx  channel.h  node.cxx  node.h
jackalope/attic/old2/: channel.forward.h  channel.h  foreign.cxx  node.h  object.h  pcm.h
jackalope/attic/old2/pcm/: ladspa.h  portaudio.h  sndfile.cxx  sndfile.h
jackalope/audio/: channel.cxx  channel.h  gain.cxx  gain.h  info.cxx  info.h  jackaudio.cxx  jackaudio.h  ladspa.cxx  ladspa.h  module.cxx  module.h  pcm.h  plugins.cxx  plugins.h  portaudio.cxx  portaudio.h  rtaudio.cxx  rtaudio.h  sndfile.cxx  sndfile.h
jackalope/log/: dest.cxx  dest.forward.h  dest.h  engine.cxx  engine.forward.h  engine.h  log_dest.cxx  log_dest.forward.h  log_dest.h  log_engine.cxx  log_engine.forward.h  log_engine.h
jackalope/pcm/: ladspa.cxx  ladspa.h  portaudio.cxx  portaudio.h  sndfile.cxx  sndfile.h
lang/perl/: .gitignore  MANIFEST  Makefile.PL
lang/perl/lib/: Jackalope.pm
lang/perl/lib/Jackalope/: Glue.pm  Glue.xs  Graph.pm  Node.pm  Object.pm  typemap
patches/: dbus-cxx-0.11.0.patch
tests/stage-1/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  component.cxx  log.dest.cxx  log_dest.cxx  tests.h  thread.cxx
tools/: fix_dbus_adapter  make_dbus_adaptor  new_source_file  run_validation
